--- a/source/_posts/为什么是台湾政治.md
+++ b/source/_posts/为什么是台湾政治.md
@@ -43,7 +43,7 @@ categories:
 * 夜问打权(蓝)
 * 大政治大爆卦(蓝，周一到五是政论，周六日是娱乐八卦)
 * 大而话之(台湾同学关注大陆的节目，比方请朱军去上节目，比方之前上海迪士尼还没开业就经常聊这事，开了之后也聊，我一个完全不喜欢去娱乐场的人，听得多了感觉慢慢也被洗了脑搞的也好想去。。)
-* 前进新台湾(看的少)
+* 前进新台湾(看的很少)
 * ……
 
 
